# cosmic-ext-connected

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
cosmic-applet-connect/src/: app.rs
cosmic-applet-connected/: Cargo.toml
cosmic-applet-connected/i18n/en/: cosmic-applet-connected.ftl
cosmic-applet-connected/src/: app.rs  config.rs  constants.rs  i18n.rs  main.rs  standalone.rs  subscriptions.rs
cosmic-applet-connected/src/device/: actions.rs  fetch.rs
cosmic-applet-connected/src/media/: views.rs
cosmic-applet-connected/src/sms/: fetch.rs  views.rs
cosmic-applet-connected/src/ui/: device_list.rs  device_page.rs  mod.rs
cosmic-applet-connected/src/ui/widgets/: mod.rs
cosmic-ext-connected/i18n/en/: cosmic-ext-connected.ftl
cosmic-ext-connected/src/: app.rs
cosmic-ext-connected/src/sms/: conversation_subscription.rs  fetch.rs  mod.rs  views.rs
data/: com.github.cosmic-connected-applet.desktop
docs/: CHANGELOG.md  SMS.md
kdeconnect-dbus/src/: contacts.rs
kdeconnect-dbus/src/plugins/: mprisremote.rs  sms.rs
